# temperature-sensor

./: Cargo.toml  README.md
data/FridgeTag 2/: 130400191542_202302140605.txt  130400191544_202304201514.txt
data/FridgeTag 2L/: 130500109088_202206081014.txt  test.txt
data/FridgeTag UL/: 100800001215_202304201410.txt
data/QTag CLm doc LR/: RCPJ00010_02_202211090128.txt  RCPJ00010_03_202304201359.txt
src/: berlinger.rs  common.rs  lib.rs  main.rs
