[package]
name = "temperature-sensor"
version = "0.1.0"
edition = "2021"
description = "Utilities for reading data from temperature sensors."
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
serde_json = "1.0.96"
json = "0.12.4"
rs-drivelist = "0.9.3"
rand = "0.8.5"
